src/test/deca/syntax/valid/multiple_assignments.deca
// Description:
//    Minimalistic program to test multiple assignments.
//
// Results:
//    None
//
// History:
//    Created on 19/01/2025
{
    int a, b, c;
    a = b = c = 10;
    print(a, b, c);
}
